# Robotics-Project-1

./: README.md  calibrator.py  calibrator2.py  calibrator_l_w.py  calibrator_r_N.py  documentation.txt
Project/launch/: project1.launch
Project/src/: calibration.cpp  client.cpp  control.cpp  velocities.cpp
project1/: CMakeLists.txt  package.xml
project1/cfg/: parameters.cfg
project1/cfgCalibration/: parametersCalibration.cfg
project1/launch/: project1.launch
project1/src/: calibration.cpp  control.cpp  odometry.cpp  velocities.cpp
project1/srv/: Reset.srv
project1_v2/launch/: project1.launch
